[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://src/img/JET.png" type="Texture" id=2]
[ext_resource path="res://Bebas-Regular_1.otf" type="DynamicFontData" id=3]
[ext_resource path="res://src/img/EXPLO1.png" type="Texture" id=4]
[ext_resource path="res://src/img/EXPLO2.png" type="Texture" id=5]
[ext_resource path="res://src/img/EXPLO3.png" type="Texture" id=6]
[ext_resource path="res://src/img/EXPLO4.png" type="Texture" id=7]
[ext_resource path="res://src/sfx/Explosion.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "died"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( -45.1742, -25.1538 )
scale = Vector2( 0.5, 0.5 )
collision_mask = 10
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 90.9422, 51.3201 )
scale = Vector2( 0.0759001, 0.0759001 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.617767, -46.7106 )
polygon = PoolVector2Array( 53.9998, 106.816, 11.0774, 100.101, 1.14974, 90.465, 0.273773, 95.1368, 6.98952, 115.576, 56.0437, 139.227, 68.8912, 154.703, 71.8111, 150.031, 72.1031, 133.971, 112.106, 133.971, 112.398, 154.119, 120.281, 150.323, 128.457, 140.395, 176.343, 117.328, 185.103, 91.9249, 181.307, 91.0489, 176.051, 96.0127, 169.919, 101.269, 130.209, 107.4, 127.289, 80.2453, 120.573, 57.1782, 105.098, 44.3307, 79.6948, 44.9147, 63.3434, 56.3022, 54.2918, 88.129 )
disabled = true

[node name="bullet_source" type="Position2D" parent="."]
position = Vector2( 90.8276, -2.09374 )

[node name="Label" type="Label" parent="."]
margin_left = 12.0209
margin_top = -35.4491
margin_right = 170.021
margin_bottom = -6.44907
custom_fonts/font = SubResource( 1 )
text = "Placeholder Text"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/died = SubResource( 2 )

[node name="DeathNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
